client/kubernetes/epoch-conversion-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epoch-conversion-client
spec:
  selector:
    matchLabels:
      app: epoch-conversion-client
  replicas: 1
  template:
    metadata:
      labels:
        app: epoch-conversion-client
    spec:
      containers:
      - name: epoch-conversion-client
        image: epoch-conversion-client:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3

---

kind: Service
apiVersion: v1
metadata:
  name: epoch-conversion-client-svc
spec:
  type: NodePort
  selector:
    app: epoch-conversion-client
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
