client/kubernetes/epoch-conversion-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: epoch-conversion-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: epoch-conversion-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - epoch-conversion-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: epoch-conversion-client-svc
        port:
          number: 8080
